fixes css issue with extra margin on the right, aligns the left side up properly, changes the size of images from percentages to pixels

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,7 @@ main {
   display: flex;
   flex-direction: column;
   margin-top: 50px;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
   background-image: url('./images/pattern2.png');
   background-repeat: no-repeat;
   background-position: top right;
@@ -91,7 +91,8 @@ main {
 
 /* logo header section */
 .header {
-  margin: 400px 50px 200px 50px;
+  margin: 200px 0;
+  padding-left: 150px;
 }
 
 .logo {
@@ -104,7 +105,7 @@ main {
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
-  margin: 0 50px;
+  padding-left: 150px;
 }
 
 .section-1-title {
@@ -119,9 +120,10 @@ main {
 
 /* infograph content section 2 */
 .section-2 {
-  background: linear-gradient(to left, #0d0d0d 90%, #ffffff00 50%);
+  background: linear-gradient(to left, #0d0d0d 85%, #ffffff00 50%);
   padding-bottom: 100px;
-  margin: 100px 0px 0 50px;
+  margin: 100px 0;
+  padding-left: 150px;
 }
 
 .infograph-area {
@@ -137,11 +139,10 @@ main {
   flex-direction: column;
   flex-basis: 100%;
   flex: 1;
-  padding-left: 50px;
 }
 
 .pie-chart-img {
-  width: 80%;
+  /* width: 500px; */
 }
 
 .legend {
@@ -154,7 +155,7 @@ main {
 }
 
 .legend-halfcircle {
-  width: 5%;
+  width: 30px;
   margin-right: 20px;
 }
 
@@ -166,12 +167,11 @@ main {
 }
 
 .section-3-title {
-  width: 50%;
-  margin-left: 200px;
+  width: 70%;
+  padding-left: 150px;
 }
 
 .section-3-content {
-  /* width: 50%; */
   margin-left: 500px;
   padding-right: 150px;
 }
@@ -184,11 +184,12 @@ main {
   flex-wrap: wrap;
   width: 100%;
   margin-top: 200px;
+  padding-left: 50px;
 }
 
-/* .background-img {
-  width: 50%;
-} */
+.background-img {
+  width: 500px;
+}
 
 .section-4-content {
   display: flex;
@@ -203,5 +204,5 @@ main {
   flex-direction: column;
   flex-basis: 100%;
   flex: 1;
-  padding-bottom: -300px;
+  justify-content: flex-end;
 }
